--- a/E-Rubric System 2.0/Web.config
+++ b/E-Rubric System 2.0/Web.config
@@ -10,6 +10,8 @@
       providerName="System.Data.SqlClient" />
     <add name="ERSConnectionString1" connectionString="Data Source=LAPTOP-LIM\SQLEXPRESS01;Initial Catalog=ERS;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ERS2ConnectionString" connectionString="Data Source=LAPTOP-BG91N1TJ\SQLEXPRESS;Initial Catalog=ERS2;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
